# cesium-osgearth

./: CMakeLists.txt  README.md  setup.sh
data/: default.earth
src/: main.cpp
